--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <body>
 
 <h1>Acerte o Irracional!</h1>
-<h2>Clique na reta no lugar onde você estima que esteja o número irracional.</h2>
+<h2>Indique, clicando na reta, a posição que você estima corresponder ao número irracional.</h2>
 
 <div class="status">
   Fase: <span id="fase">1</span> |
